fix: fixing line-heights on mobile

--- a/styles/index.css
+++ b/styles/index.css
@@ -87,7 +87,7 @@ h6,
 dt,
 th {
   font-weight: bold;
-  line-height: 0.618em;
+  line-height: 1em;
 }
 
 h1 {
@@ -192,11 +192,15 @@ section {
 ul {
   margin: 0;
   padding-left: 0;
-  line-height: 48px;
 }
 
 ul li {
+  display: block;
   list-style-type: none;
+}
+
+ul li + li {
+  margin-top: 1rem;
 }
 
 @media (min-width: 42em) {
@@ -205,6 +209,7 @@ ul li {
   }
 
   ul li {
+    display: list-item;
     list-style-type: disc;
   }
 }
@@ -216,7 +221,6 @@ a {
   text-decoration-color: #75715e;
   text-decoration-thickness: 2px;
   font-weight: normal;
-  line-height: 48px;
   display: inline-block;
   transition: text-decoration-color 0.2s ease-out, color 0.2s ease-out;
 }
